client/src/App.css
a {
  color: #24b2ff;
}

ul {
  list-style-type: none;
  padding: 0;
}

.App {
  text-align: left;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
  Helvetica, Arial, "Lucida Grande", sans-serif;
  background: linear-gradient(90deg, #780675, #100a62);
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header, .App-body {
  /*background-color: #0f224a;*/
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: calc(6px + 2vmin);
  color: white;
  padding-left: 20px;
  padding-right: 20px;
}
@media (min-width: 600px) {
  .App-header, .App-body {
    font-size: calc(6px + 1vmin);
  }
}

.App-link {
  color: #61dafb;
}

.Collapsible {
  cursor: pointer;
}

.countdown-soon {
  color:#271fb3;
}

/* --- graphic container --- */
.graphic-container-outer {
  width: 85vw;
  margin: -45px 10px 10px 10px;
}
.graphic-container-icon-background {
  width: 40px;
  height: 40px;
  position: relative;
  top: 72px;
  left: -15px;
  background: url("./assets/images/icons/icon-background.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon {
  width: 34px;
  height: 34px;
  position: relative;
  top: 35px;
  left: -12px;
}
.graphic-container-icon.default {
  background: url("./assets/images/icons/pokeball-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.event {
  background: url("./assets/images/icons/event-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.raid {
  background: url("./assets/images/icons/raid-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.shraid {
  background: url("./assets/images/icons/shraid-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.egg {
  background: url("./assets/images/icons/egg-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.leader {
  background: url("./assets/images/icons/leader-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.research {
  background: url("./assets/images/icons/research-icon.png") no-repeat center center;
  background-size: contain;
}
.graphic-container-icon.upcoming {
  background: url("./assets/images/icons/upcoming-icon.png") no-repeat center center;
  background-size: contain;
}

.graphic-container-gradient {
  background-image: linear-gradient(135deg, #271fb3, rgba(255,0,0,0));
  margin-left: 10px;
}
.graphic-container-gradient > p {
  color: white;
  height: 100%;
  padding: 2px;
  padding-left: 20px;
  margin: 0px;
  font-size: 1.2em;
}
.graphic-container-inner {
  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  border-color: #f7cbf2;
  background-image: linear-gradient(to left, #d363c5, #7f42dd);
  width: 100%;
}
.graphic-container-inner > ul {
  margin-top: 20px;
  margin-bottom: 20px;
}
.graphic-container-inner > ul > li {
  margin-top: 5px;
  margin-left: 20px;
}
.graphic-container-inner > p {
  margin-left: 20px;
}

/* --- graphic mon --- */
.graphic-mon-outer {
  margin: 20px;
}
.graphic-mon-outer > * {
  margin: auto;
}
.graphic-mon-background {  
  background: url("./assets/images/pokeball-background.png") no-repeat center center;
  width: 50px;
  height: 50px;
  background-size: contain;
}
.graphic-mon-image {
  width: 0;
  height: 0;
}
.graphic-mon-image > img {
  width: 80px;
  height: 80px;
  object-fit: cover;
  position: relative;
  top: -65px;
  left: -40px;
}
.graphic-mon-text {
  padding-top:5px;
  text-align: center;
}

/* --- Tabs --- */
.react-tabs {
  margin-top:10px;
}
.react-tabs__tab {
  padding: 8px 4px;
  margin: 1px;
}
.react-tabs__tab.react-tabs__tab--selected {
  padding: 8px 4px;
  border-radius: 10px;
  border-width: 0;
  background-color: #7f42dd;
  background: #7f42dd;
  color: white;
}
.react-tabs__tab:focus:after {  
  content: '';
  position: absolute;
  height: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #ffffff00;
}
.react-tabs__tab-list {
  border-bottom: 0px;
}

.source-container {
  margin-left: 10px;
  margin-top: 30px;
}
.source-container > p {  
  background-image: linear-gradient(135deg, #271fb3, rgba(255,0,0,0));
  padding: 10px;
}

.welcome-banner {
  margin-top: 32px;
  margin-left: 10px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

